# sshuttle

./: .bandit  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yaml  .tool-versions  .travis.yml  CHANGELOG.md  CHANGES.rst  MANIFEST.in  Makefile  README.md  README.rst  VERSION.txt  all.do  assembler.py  bandit.yml  clean.do  client.py  default.8.do  do  firewall.py  flake.nix  helpers.py  hostwatch.py  ipt  iptables.py  main.py  options.py  pyproject.toml  requirements-tests.txt  requirements.txt  run  server.py  setup.cfg  setup.py  ssh.py  sshuttle.md  ssnet.py  ssyslog.py  (+2 more)
.github/: dependabot.yml
.github/workflows/: codeql.yml  osv-scanner.yml  pythonpackage.yml  release-please.yml
Documentation/: .gitignore  all.do  clean.do  default.8.do  default.md.tmp.do  md-to-man.do  md2man.py  sshuttle.md
Sshuttle VPN.app/Contents/MacOS/: Sshuttle
Sshuttle VPN.app/Contents/Resources/: UserDefaults.plist  main.py  models.py  stupid.py
compat/: ssubprocess.py
docs/: Makefile  changes.rst  chromeos.rst  conf.orig.py  conf.py  how-it-works.rst  index.html  index.rst  installation.rst  make.bat  manpage.rst  openwrt.rst  overview.rst  platform.rst  requirements.rst  support.rst  table.rst  tproxy.rst  trivia.rst  usage.rst  windows.rst
docs/examples/: README.md  server.yaml
examples/: README.md  server-basic.yaml  server-dns-override.yaml  server-multi-profiles.yaml  server.json
git@github.com:oscarg933/: atom-sync.git  sshuttle.git
hack/: README.md  compose.yml  exec-iperf  exec-sshuttle  exec-tool  run-benchmark  run-checks  setup.service  test-bed  test-bed-up
packaging/: control  make_deb  prefixes.conf  sshuttle.conf  tunnel.conf
scripts/: Containerfile  README.md  compose.yml  container.setup.sh  exec-sshuttle  exec-tool  run-benchmark  run-checks  test-bed  test-profiles
src/: README.md  assembler.py  client.py  do  firewall.py  helpers.py  hostwatch.py  main.py  options.py  server.py  ssh.py  sshuttle  sshuttle.md  ssnet.py  ssyslog.py
src/ui-macos/: MainMenu.xib  askpass.py  clean.do  default.app.do  default.app.tar.gz.do  default.app.zip.do  dist.do  main.py  models.py  my.py  sources.list.do
src/ui-macos/bits/: runpython.c  runpython.do
sshuttle/: __init__.py  __main__.py  assembler.py  client.py  cmdline.py  default.8.do  firewall.py  helpers.py  hostwatch.py  linux.py  namespace.py  options.py  sdnotify.py  server.py  ssh.py  sshuttle.md  ssnet.py  ssyslog.py  stresstest.py  sudoers.py  version.py
sshuttle/compat/: ssubprocess.py
sshuttle/lib/: base64ify.py  sudoer.sh
sshuttle/methods/: __init__.py  ipfw.py  nat.py  nft.py  pf.py  tproxy.py  windivert.py
sshuttle/tests/: test_firewall.py  test_helpers.py  test_methods_nat.py  test_methods_pf.py  test_methods_tproxy.py
sshuttle/tests/client/: test_firewall.py  test_helpers.py  test_methods_nat.py  (+4 more)
sshuttle/ui-macos/: app.icns  askpass.py  default.app.do  default.app.tar.gz.do  default.nib.do  main.py  models.py  my.py  run.do
tests/: conftest.py
tests/client/: test_firewall.py  test_helpers.py  test_methods_nat.py  test_methods_pf.py  test_methods_tproxy.py  test_options.py  test_sdnotify.py  test_sudoers.py
tests/server/: test_server.py
tests/ssh/: test_parse_hostport.py
ui-macos/: .gitignore  Info.plist  MainMenu.xib  all.do  app.icns  askpass.py  clean.do  debug.app.do  default.app.do  default.app.zip.do  default.nib.do  git-export.do  main.py  models.py  my.py  prime-sudo.sh  run.do  sources.list.do
ui-macos/bits/: .gitignore  run  runpython.c  runpython.do
version/: .gitattributes  .gitignore  __init__.py  _version.py.do  all.do  clean.do  gitvars.do  gitvars.pre  prodname  vars.do
(+14 files in other folders)
