[tool.poetry]
name = "sshuttle"
version = "1.1.1"
description = "Transparent proxy server that works as a poor man's VPN. Forwards over ssh. Doesn't require admin. Works with Linux and MacOS. Supports DNS tunneling."
authors = ["Brian May <brian@linuxpenguins.xyz>"]
license = "LGPL-2.1"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
pyflakes = "^3.2.0"
bump2version = "^1.0.1"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sshuttle = "sshuttle.cmdline:main"
