[project]
authors = [
    {name = "Brian May", email = "brian@linuxpenguins.xyz"},
]
license = {text = "LGPL-2.1"}
requires-python = "<4.0,>=3.9"
dependencies = []
name = "sshuttle"
version = "1.3.1"
description = "Transparent proxy server that works as a poor man's VPN. Forwards over ssh. Doesn't require admin. Works with Linux and MacOS. Supports DNS tunneling."
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

[project.scripts]
sshuttle = "sshuttle.cmdline:main"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.1",
    "pytest-cov<7.0,>=4.1",
    "flake8<8.0.0,>=7.0.0",
    "pyflakes<4.0.0,>=3.2.0",
    "bump2version<2.0.0,>=1.0.1",
    "twine<7,>=5",
    "black>=25.1.0",
    "jedi-language-server>=0.44.0",
    "pylsp-mypy>=0.7.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.2",
]
docs = [
    "sphinx==8.1.3; python_version ~= \"3.10\"",
    "furo==2024.8.6",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.jj"
]
